# RustyTask

./: README.md
RustyTask/: Cargo.toml  Log_file.txt
RustyTask/src/: main.rs  system_info.rs
