[package]
name = "system_information"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "tokio"]}
nvml-wrapper = "=0.10.0"
sysinfo = {version = "0.32.0"}
iced_aw = { version = "0.11.0", default-features = false , features = ["menu", "quad"]}
iced_fonts = "0.1.1"
chrono = "0.4.38"
plotters-iced = "0.11"
plotters="0.3"

